Metaprogramming/Antrl/Capl_grammar/capl-g4/grammar/CaplGrammar.Core/CaplParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CaplParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace CaplGrammar.Core {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class CaplParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KeyHit=1, KeyboardSymbol=2, StopMeasurement=3, Start=4, ErrorFrame=5, 
		Key=6, On=7, Variables=8, Break=9, Case=10, Char=11, Byte=12, Continue=13, 
		Default=14, Do=15, Double=16, Else=17, Float=18, For=19, If=20, Int=21, 
		Word=22, Dword=23, Message=24, EnvVar=25, Timer=26, MsTimer=27, Long=28, 
		Int64=29, Return=30, Switch=31, Void=32, While=33, LeftParen=34, RightParen=35, 
		LeftBracket=36, RightBracket=37, LeftBrace=38, RightBrace=39, Less=40, 
		LessEqual=41, Greater=42, GreaterEqual=43, LeftShift=44, RightShift=45, 
		Plus=46, PlusPlus=47, Minus=48, MinusMinus=49, Star=50, Div=51, Mod=52, 
		And=53, Or=54, AndAnd=55, OrOr=56, Caret=57, Not=58, Tilde=59, Question=60, 
		Colon=61, Semi=62, Comma=63, Assign=64, StarAssign=65, DivAssign=66, ModAssign=67, 
		PlusAssign=68, MinusAssign=69, LeftShiftAssign=70, RightShiftAssign=71, 
		AndAssign=72, XorAssign=73, OrAssign=74, Equal=75, NotEqual=76, Ellipsis=77, 
		Identifier=78, This=79, Dot=80, Constant=81, DigitSequence=82, StringLiteral=83, 
		Whitespace=84, Newline=85, BlockComment=86, LineComment=87;
	public const int
		RULE_primaryExpression = 0, RULE_startBlock = 1, RULE_variableBlock = 2, 
		RULE_eventBlock = 3, RULE_timerBlock = 4, RULE_errorFrame = 5, RULE_messageBlock = 6, 
		RULE_stopMeasurement = 7, RULE_envBlock = 8, RULE_postfixExpression = 9, 
		RULE_argumentExpressionList = 10, RULE_unaryExpression = 11, RULE_unaryOperator = 12, 
		RULE_castExpression = 13, RULE_multiplicativeExpression = 14, RULE_additiveExpression = 15, 
		RULE_shiftExpression = 16, RULE_relationalExpression = 17, RULE_equalityExpression = 18, 
		RULE_andExpression = 19, RULE_exclusiveOrExpression = 20, RULE_inclusiveOrExpression = 21, 
		RULE_logicalAndExpression = 22, RULE_logicalOrExpression = 23, RULE_conditionalExpression = 24, 
		RULE_assignmentExpression = 25, RULE_assignmentOperator = 26, RULE_expression = 27, 
		RULE_constantExpression = 28, RULE_declaration = 29, RULE_declarationSpecifiers = 30, 
		RULE_declarationSpecifiers2 = 31, RULE_declarationSpecifier = 32, RULE_initDeclaratorList = 33, 
		RULE_initDeclarator = 34, RULE_typeSpecifier = 35, RULE_messageType = 36, 
		RULE_messageIdentifier = 37, RULE_specifierQualifierList = 38, RULE_declarator = 39, 
		RULE_directDeclarator = 40, RULE_nestedParenthesesBlock = 41, RULE_parameterTypeList = 42, 
		RULE_parameterList = 43, RULE_parameterDeclaration = 44, RULE_identifierList = 45, 
		RULE_typeName = 46, RULE_abstractDeclarator = 47, RULE_directAbstractDeclarator = 48, 
		RULE_initializer = 49, RULE_initializerList = 50, RULE_designation = 51, 
		RULE_designatorList = 52, RULE_designator = 53, RULE_statement = 54, RULE_labeledStatement = 55, 
		RULE_compoundStatement = 56, RULE_blockItemList = 57, RULE_blockItem = 58, 
		RULE_expressionStatement = 59, RULE_selectionStatement = 60, RULE_iterationStatement = 61, 
		RULE_forCondition = 62, RULE_forDeclaration = 63, RULE_forExpression = 64, 
		RULE_jumpStatement = 65, RULE_compilationUnit = 66, RULE_translationUnit = 67, 
		RULE_externalDeclaration = 68, RULE_functionDefinition = 69, RULE_declarationList = 70;
	public static readonly string[] ruleNames = {
		"primaryExpression", "startBlock", "variableBlock", "eventBlock", "timerBlock", 
		"errorFrame", "messageBlock", "stopMeasurement", "envBlock", "postfixExpression", 
		"argumentExpressionList", "unaryExpression", "unaryOperator", "castExpression", 
		"multiplicativeExpression", "additiveExpression", "shiftExpression", "relationalExpression", 
		"equalityExpression", "andExpression", "exclusiveOrExpression", "inclusiveOrExpression", 
		"logicalAndExpression", "logicalOrExpression", "conditionalExpression", 
		"assignmentExpression", "assignmentOperator", "expression", "constantExpression", 
		"declaration", "declarationSpecifiers", "declarationSpecifiers2", "declarationSpecifier", 
		"initDeclaratorList", "initDeclarator", "typeSpecifier", "messageType", 
		"messageIdentifier", "specifierQualifierList", "declarator", "directDeclarator", 
		"nestedParenthesesBlock", "parameterTypeList", "parameterList", "parameterDeclaration", 
		"identifierList", "typeName", "abstractDeclarator", "directAbstractDeclarator", 
		"initializer", "initializerList", "designation", "designatorList", "designator", 
		"statement", "labeledStatement", "compoundStatement", "blockItemList", 
		"blockItem", "expressionStatement", "selectionStatement", "iterationStatement", 
		"forCondition", "forDeclaration", "forExpression", "jumpStatement", "compilationUnit", 
		"translationUnit", "externalDeclaration", "functionDefinition", "declarationList"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'stopMeasurement'", "'start'", "'errorFrame'", "'key'", 
		"'on'", "'variables'", "'break'", "'case'", "'char'", "'byte'", "'continue'", 
		"'default'", "'do'", "'double'", "'else'", "'float'", "'for'", "'if'", 
		"'int'", "'word'", "'dword'", "'message'", "'envVar'", "'timer'", "'msTimer'", 
		"'long'", "'int64'", "'return'", "'switch'", "'void'", "'while'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", 
		"'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", "'|'", 
		"'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", "'='", 
		"'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", 
		"'|='", "'=='", "'!='", "'...'", null, "'this'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KeyHit", "KeyboardSymbol", "StopMeasurement", "Start", "ErrorFrame", 
		"Key", "On", "Variables", "Break", "Case", "Char", "Byte", "Continue", 
		"Default", "Do", "Double", "Else", "Float", "For", "If", "Int", "Word", 
		"Dword", "Message", "EnvVar", "Timer", "MsTimer", "Long", "Int64", "Return", 
		"Switch", "Void", "While", "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
		"LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
		"LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", 
		"Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", 
		"Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", "DivAssign", 
		"ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", "RightShiftAssign", 
		"AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", "Ellipsis", 
		"Identifier", "This", "Dot", "Constant", "DigitSequence", "StringLiteral", 
		"Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CaplParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CaplParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CaplParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CaplParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PrimaryExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(CaplParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Constant() { return GetToken(CaplParser.Constant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] StringLiteral() { return GetTokens(CaplParser.StringLiteral); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringLiteral(int i) {
			return GetToken(CaplParser.StringLiteral, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftParen() { return GetToken(CaplParser.LeftParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightParen() { return GetToken(CaplParser.RightParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CompoundStatementContext compoundStatement() {
			return GetRuleContext<CompoundStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableBlockContext[] variableBlock() {
			return GetRuleContexts<VariableBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableBlockContext variableBlock(int i) {
			return GetRuleContext<VariableBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventBlockContext[] eventBlock() {
			return GetRuleContexts<EventBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventBlockContext eventBlock(int i) {
			return GetRuleContext<EventBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TimerBlockContext[] timerBlock() {
			return GetRuleContexts<TimerBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TimerBlockContext timerBlock(int i) {
			return GetRuleContext<TimerBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ErrorFrameContext[] errorFrame() {
			return GetRuleContexts<ErrorFrameContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ErrorFrameContext errorFrame(int i) {
			return GetRuleContext<ErrorFrameContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnvBlockContext[] envBlock() {
			return GetRuleContexts<EnvBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnvBlockContext envBlock(int i) {
			return GetRuleContext<EnvBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDefinitionContext[] functionDefinition() {
			return GetRuleContexts<FunctionDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDefinitionContext functionDefinition(int i) {
			return GetRuleContext<FunctionDefinitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StartBlockContext[] startBlock() {
			return GetRuleContexts<StartBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StartBlockContext startBlock(int i) {
			return GetRuleContext<StartBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MessageBlockContext[] messageBlock() {
			return GetRuleContexts<MessageBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MessageBlockContext messageBlock(int i) {
			return GetRuleContext<MessageBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StopMeasurementContext[] stopMeasurement() {
			return GetRuleContexts<StopMeasurementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StopMeasurementContext stopMeasurement(int i) {
			return GetRuleContext<StopMeasurementContext>(i);
		}
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primaryExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICaplParserListener typedListener = listener as ICaplParserListener;
			if (typedListener != null) typedListener.EnterPrimaryExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICaplParserListener typedListener = listener as ICaplParserListener;
			if (typedListener != null) typedListener.ExitPrimaryExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICaplParserVisitor<TResult> typedVisitor = visitor as ICaplParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimaryExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimaryExpressionContext primaryExpression() {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(Context, State);
		EnterRule(_localctx, 0, RULE_primaryExpression);
		int _la;
		try {
			int _alt;
			State = 171;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 142;
				Match(Identifier);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 143;
				Match(Constant);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 144;
					Match(StringLiteral);
					}
					}
					State = 147;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==StringLiteral );
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 149;
				Match(LeftParen);
				State = 150;
				expression();
				State = 151;
				Match(RightParen);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 153;
				Match(LeftParen);
				State = 154;
				compoundStatement();
				State = 155;
				Match(RightParen);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 168;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						State = 166;
						ErrorHandler.Sync(this);
						switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
						case 1:
							{
							State = 157;
							variableBlock();
							}
							break;
						case 2:
							{
							State = 158;
							eventBlock();
							}
							break;
						case 3:
							{
							State = 159;
							timerBlock();
							}
							break;
						case 4:
							{
							State = 160;
							errorFrame();
							}
							break;
						case 5:
							{
							State = 161;
							envBlock();
							}
							break;
						case 6:
							{
							State = 162;
							functionDefinition();
							}
							break;
						case 7:
							{
							State = 163;
							startBlock();
							}
							break;
						case 8:
							{
							State = 164;
							messageBlock();
							}
							break;
						case 9:
							{
							State = 165;
							stopMeasurement();
							}
							break;
						}
						} 
					}
					State = 170;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode On() { return GetToken(CaplParser.On, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Start() { return GetToken(CaplParser.Start, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(CaplParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(CaplParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockItemListContext blockItemList() {
			return GetRuleContext<BlockItemListContext>(0);
		}
		public StartBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_startBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICaplParserListener typedListener = listener as ICaplParserListener;
			if (typedListener != null) typedListener.EnterStartBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICaplParserListener typedListener = listener as ICaplParserListener;
			if (typedListener != null) typedListener.ExitStartBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICaplParserVisitor<TResult> typedVisitor = visitor as ICaplParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStartBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartBlockContext startBlock() {
		StartBlockContext _localctx = new StartBlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_startBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			Match(On);
			State = 174;
			Match(Start);
			State = 175;
			Match(LeftBrace);
			State = 177;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << On) | (1L << Variables) | (1L << Break) | (1L << Case) | (1L << Char) | (1L << Byte) | (1L << Continue) | (1L << Default) | (1L << Do) | (1L << Double) | (1L << Float) | (1L << For) | (1L << If) | (1L << Int) | (1L << Word) | (1L << Dword) | (1L << Message) | (1L << Timer) | (1L << MsTimer) | (1L << Long) | (1L << Int64) | (1L << Return) | (1L << Switch) | (1L << Void) | (1L << While) | (1L << LeftParen) | (1L << LeftBracket) | (1L << LeftBrace) | (1L << Less) | (1L << LessEqual) | (1L << Greater) | (1L << GreaterEqual) | (1L << LeftShift) | (1L << RightShift) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Star) | (1L << Div) | (1L << Mod) | (1L << And) | (1L << Or) | (1L << AndAnd) | (1L << OrOr) | (1L << Caret) | (1L << Not) | (1L << Tilde) | (1L << Question) | (1L << Semi) | (1L << Comma))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (Assign - 64)) | (1L << (StarAssign - 64)) | (1L << (DivAssign - 64)) | (1L << (ModAssign - 64)) | (1L << (PlusAssign - 64)) | (1L << (MinusAssign - 64)) | (1L << (LeftShiftAssign - 64)) | (1L << (RightShiftAssign - 64)) | (1L << (AndAssign - 64)) | (1L << (XorAssign - 64)) | (1L << (OrAssign - 64)) | (1L << (Equal - 64)) | (1L << (NotEqual - 64)) | (1L << (Identifier - 64)) | (1L << (Constant - 64)) | (1L << (DigitSequence - 64)) | (1L << (StringLiteral - 64)))) != 0)) {
				{
				State = 176;
				blockItemList();
				}
			}

			State = 179;
			Match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Variables() { return GetToken(CaplParser.Variables, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(CaplParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(CaplParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockItemListContext blockItemList() {
			return GetRuleContext<BlockItemListContext>(0);
		}
		public VariableBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICaplParserListener typedListener = listener as ICaplParserListener;
			if (typedListener != null) typedListener.EnterVariableBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICaplParserListener typedListener = listener as ICaplParserListener;
			if (typedListener != null) typedListener.ExitVariableBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICaplParserVisitor<TResult> typedVisitor = visitor as ICaplParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableBlockContext variableBlock() {
		VariableBlockContext _localctx = new VariableBlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_variableBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 181;
			Match(Variables);
			State = 182;
			Match(LeftBrace);
			State = 184;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << On) | (1L << Variables) | (1L << Break) | (1L << Case) | (1L << Char) | (1L << Byte) | (1L << Continue) | (1L << Default) | (1L << Do) | (1L << Double) | (1L << Float) | (1L << For) | (1L << If) | (1L << Int) | (1L << Word) | (1L << Dword) | (1L << Message) | (1L << Timer) | (1L << MsTimer) | (1L << Long) | (1L << Int64) | (1L << Return) | (1L << Switch) | (1L << Void) | (1L << While) | (1L << LeftParen) | (1L << LeftBracket) | (1L << LeftBrace) | (1L << Less) | (1L << LessEqual) | (1L << Greater) | (1L << GreaterEqual) | (1L << LeftShift) | (1L << RightShift) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Star) | (1L << Div) | (1L << Mod) | (1L << And) | (1L << Or) | (1L << AndAnd) | (1L << OrOr) | (1L << Caret) | (1L << Not) | (1L << Tilde) | (1L << Question) | (1L << Semi) | (1L << Comma))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (Assign - 64)) | (1L << (StarAssign - 64)) | (1L << (DivAssign - 64)) | (1L << (ModAssign - 64)) | (1L << (PlusAssign - 64)) | (1L << (MinusAssign - 64)) | (1L << (LeftShiftAssign - 64)) | (1L << (RightShiftAssign - 64)) | (1L << (AndAssign - 64)) | (1L << (XorAssign - 64)) | (1L << (OrAssign - 64)) | (1L << (Equal - 64)) | (1L << (NotEqual - 64)) | (1L << (Identifier - 64)) | (1L << (Constant - 64)) | (1L << (DigitSequence - 64)) | (1L << (StringLiteral - 64)))) != 0)) {
				{
				State = 183;
				blockItemList();
				}
			}

			State = 186;
			Match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
